--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
+    "crypto-js": "^3.1.9-1",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
+    "sha256": "^0.2.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
