--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.2",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
+    "mongodb": "^2.2.33",
     "mysql": "^2.15.0",
     "rxjs": "5.4.3",
     "sha256": "^0.2.0",
